<resources>
    <string name="app_name">AWTimesheet</string>
    <string name="calendar">Calendar</string>
    <string name="create_absence_title">Create absence</string>
    <string name="absence">Absence</string>
    <string name="workday">Workday</string>
    <string name="settings">Settings</string>
    <string name="project_details">Project details</string>
</resources>